# python_parser

./: .gitignore  pyproject.toml  requirements.txt
python_parser/src/: base.py  config.py  main.py  models.py  models_old.py  parse_content.py  parse_content_old.py  parser.py
python_parser/src/models/: __init__.py  datatypes.py  datatypes_v2.py  nix_parse_primitives.py  parse_primitives.py  parse_primitives_old.py  parsers.py
python_parser/tests/: test_markdown_parser-old.py  test_markdown_parser.py
python_parser/tests/md_templates/: Author.md  Book.md  ObsidianFile.md  base.md  frontmatter_content.md  main_content.md  no_frontmatter.md  template.md
